--- a/.doc_gen/metadata/s3_metadata.yaml
+++ b/.doc_gen/metadata/s3_metadata.yaml
@@ -301,7 +301,7 @@ s3_CopyObject:
           excerpts:
             - description:
               snippet_tags:
-                - rust.example_code.s3.basics.copy_object
+                - rust.example_code.s3.copy_object
     SAP ABAP:
       versions:
         - sdk_version: 1
