--- a/rustv1/examples/s3/Cargo.toml
+++ b/rustv1/examples/s3/Cargo.toml
@@ -47,3 +47,4 @@ uuid = { version = "1.3.1", features = ["serde", "v4"] }
 
 serde_json = "1"
 serde = { version = "1", features = ["derive"]}
+chrono = "0.4.38"
