Test: add import info to IAM metadata

--- a/.doc_gen/metadata/iam_metadata.yaml
+++ b/.doc_gen/metadata/iam_metadata.yaml
@@ -578,7 +578,7 @@ iam_CreateAccessKey:
         - sdk_version: 1
           github: swift/example_code/iam
           excerpts:
-            - description:
+            - description: ```import AWSIAM```
               snippet_tags:
                 - iam.swift.basics.iam.createaccesskey
     Bash:
