gitignore changes for lambda in swift sample

--- a/swift/example_code/lambda/lambda-in-swift/.gitignore
+++ b/swift/example_code/lambda/lambda-in-swift/.gitignore
@@ -1,9 +1,4 @@
 .DS_Store
 /.build
 /.vscode
-/Packages
-xcuserdata/
-DerivedData/
-.swiftpm/configuration/registries.json
-.swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
-.netrc
+/Package.resolved
