Roll in changes

--- a/javav2/example_code/batch/pom.xml
+++ b/javav2/example_code/batch/pom.xml
@@ -111,6 +111,10 @@
         </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
+            <artifactId>ec2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
             <artifactId>sso</artifactId>
         </dependency>
         <dependency>
