updated YAML file

--- a/.doc_gen/metadata/batch_metadata.yaml
+++ b/.doc_gen/metadata/batch_metadata.yaml
@@ -28,7 +28,7 @@ batch_DescribeJobs:
               snippet_tags:
                 - batch.java2.retrieve.job.main
   services:
-    batch: {batch_DescribeJobs}
+    batch: {DescribeJobs}
 batch_SubmitJob:
   languages:
     Java:
