--- a/.github/workflows/validate-doc-metadata.yml
+++ b/.github/workflows/validate-doc-metadata.yml
@@ -16,7 +16,7 @@ jobs:
       - name: checkout repo content
         uses: actions/checkout@v4
       - name: validate metadata
-        uses: awsdocs/aws-doc-sdk-examples-tools@2024-08-13-A
+        uses: awsdocs/aws-doc-sdk-examples-tools@8b0139b02a81cc9111a8e1cc3e39bbbfdba41c7a
         with:
           doc_gen_only: "False"
           strict_titles: "True"
