Multilanguage: Fixes for incorrect GitHub paths in .NET, Kotlin, and Python. (#6748)
* Fix for bad GitHub paths in .NET and Python.
Co-authored-by: ford prior <fprior@amazon.com>

--- a/.doc_gen/metadata/sns_metadata.yaml
+++ b/.doc_gen/metadata/sns_metadata.yaml
@@ -680,7 +680,7 @@ sns_Publish:
     Kotlin:
       versions:
         - sdk_version: 1
-          github: kotlin/services/secretsmanager
+          github: kotlin/services/sns
           sdkguide:
           excerpts:
             - description:
@@ -876,7 +876,7 @@ sns_SetTopicAttributes:
     Kotlin:
       versions:
         - sdk_version: 1
-          github: kotlin/services/secretsmanager
+          github: kotlin/services/sns
           sdkguide:
           excerpts:
             - description:
@@ -981,7 +981,7 @@ sns_Subscribe:
     Kotlin:
       versions:
         - sdk_version: 1
-          github: kotlin/services/secretsmanager
+          github: kotlin/services/sns
           sdkguide:
           excerpts:
             - description: Subscribe an email address to a topic.
@@ -1098,7 +1098,7 @@ sns_Unsubscribe:
     Kotlin:
       versions:
         - sdk_version: 1
-          github: kotlin/services/secretsmanager
+          github: kotlin/services/sns
           sdkguide:
           excerpts:
             - description:
