--- a/.github/workflows/label-auditor.yml
+++ b/.github/workflows/label-auditor.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          sparse-checkout: .github/allowed-labels.yml
+          sparse-checkout: .github/allowed-labels.yaml
           sparse-checkout-cone-mode: false
       
       # The Audit Labels workflow creates, renames, updates
